# hep-bitnet

./: .gitignore  LICENSE  README.md  calibrated_bit_test_predict1.npz  calibrated_bit_test_predict3.npz  calibrated_test_predict2.npz  calibrated_test_predict3.npz  calibrated_test_predict4.npz  plotting_script.ipynb  pyproject.toml  setup.py
bitnet/: __init__.py  _bitlinear.py  bitlinear.py  bitlinear_opt.py  bitlinear_orig.py  losses.py  vblinear.py
examples/: README.md  ds1-photon_CaloINN_bitnet.sh  ds1-photon_CaloINN_fullbitnet.sh  ds1-photon_CaloINN_regular.sh  ds1-photon_CaloINN_splitbitnet.sh  ds1-photon_CaloINN_splitregularnet.sh  ds1-pion_CaloINN_bitnet.sh  ds1-pion_CaloINN_fullbitnet.sh  ds1-pion_CaloINN_regular.sh  ds1-pion_CaloINN_splitbitnet.sh  ds1-pion_CaloINN_splitregularnet.sh  ds2_CaloDREAM_regular_sample.sh  ds2_CaloDREAM_regular_train.sh  ds2_CaloDREAM_regular_train_shape.sh  ds2_CaloINN_bitnet.sh  ds2_CaloINN_fullbitnet.sh  ds2_CaloINN_regular.sh  ds2_CaloINN_splitbitnet.sh  ds2_CaloINN_splitregularnet.sh  run_ds1-photon_CaloINN_bitnet.sbatch  run_ds1-photon_CaloINN_fullbitnet.sbatch  run_ds1-photon_CaloINN_regular.sbatch  run_ds1-photon_CaloINN_splitbitnet.sbatch  run_ds1-photon_CaloINN_splitregularnet.sbatch  run_ds1-pion_CaloINN_bitnet.sbatch  run_ds1-pion_CaloINN_fullbitnet.sbatch  run_ds1-pion_CaloINN_regular.sbatch  run_ds1-pion_CaloINN_splitbitnet.sbatch  run_ds1-pion_CaloINN_splitregularnet.sbatch  run_ds2_CaloDREAM_sample_158b_aggressive158b.sbatch  run_ds2_CaloDREAM_sample_158b_noemb158b.sbatch  run_ds2_CaloDREAM_sample_158b_reg.sbatch  (+13 more)
(+189 files in other folders)
