[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet"
version = "0.1.4"
authors = [
  { name="Claudius Krause", email="Claudius.Krause@oeaw.ac.at" },
  { name="Daohan Wang", email="Daohan.Wang@oeaw.ac.at" },
  { name="Ramon Winterhalder", email="ramon.winterhalder@unimi.it" },
]
description = "PyTorch implementation of BitNet including HEP experiments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "black",
  "isort"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
atomic = true
line_length = 88

[project.urls]
Homepage = "https://github.com/ramonpeter/hep-bitnet"
Issues = "https://github.com/ramonpeter/hep-bitnet/issues"
